Fixed : - Double clicking bug that broke the logo alignment.
In Progress:
- Observer scroll effect for the menu.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,7 +196,7 @@ h6 {
   display: none;
 }
 
-.menu-image>img {
+#menuImage {
   object-fit: cover;
   object-position: 50% 50%;
 }
